--- a/strings.conf
+++ b/strings.conf
@@ -1,5 +1,6 @@
 #Archtype name
 !setname 0x1f4 Magikular
 !setname 0xb11 Nethersea
+!setname 0xb12 SoulForce
 !setname 0xb51 Ancient Deep
 !setname 0x990 Duel Altering
