Card Add(in desc)
Add First Reoyin card

--- a/strings.conf
+++ b/strings.conf
@@ -1,6 +1,7 @@
 #Archtype name
 !setname 0x1f4 Magikular
 !setname 0xb03 Zodragon
+!setname 0xb04 Reoyin
 !setname 0xb11 Nethersea
 !setname 0xb12 SoulForce
 !setname 0xb51 Ancient Deep
