--- a/strings.conf
+++ b/strings.conf
@@ -2,6 +2,7 @@
 !setname 0x1f4 Magikular
 !setname 0xb03 Zodragon
 !setname 0xb04 Reoyin
+!setname 0xb05 Setsugebishin
 !setname 0xb11 Nethersea
 !setname 0xb12 SoulForce
 !setname 0xb51 Ancient Deep
