Add missing archetype name

--- a/strings.conf
+++ b/strings.conf
@@ -9,5 +9,9 @@
 #Cstudio Archetype
 !setname 0xbc0 NGNL
 !setname 0xbc1 YuYuYu
-
+!setname 0xbc2 HN
+!setname 0x3bc2 HN CPU
+!setname 0x5bc2 HN HDD
+!setname 0x6bc2 HN Nation
+!setname 0xbbc2 HN CPU Candidate
 !setname 0xbc3 OTNN
