Change Nethersea Set Number

--- a/strings.conf
+++ b/strings.conf
@@ -4,7 +4,7 @@
 !setname 0xb03 Zodragon
 !setname 0xb04 Reoyin
 !setname 0xb05 Setsugebishin
-!setname 0xb11 Nethersea
+!setname 0xbe1 Nethersea
 !setname 0x990 Duel Altering
 #Cstudio Archetype
 !setname 0xbc0 NGNL
