Add 4 Amalgam cards

--- a/strings.conf
+++ b/strings.conf
@@ -4,6 +4,8 @@
 !setname 0xb03 Zodragon
 !setname 0xb04 Reoyin
 !setname 0xb05 Setsugebishin
+!setname 0xb06 Stellaron
+!setname 0xb07 Amalgam
 !setname 0xbe1 Nethersea
 !setname 0x990 Duel Altering
 #Cstudio Archetype
