Add 3 new cards for stratossea

--- a/strings.conf
+++ b/strings.conf
@@ -6,6 +6,7 @@
 !setname 0xb05 Setsugebishin
 !setname 0xb06 Stellaron
 !setname 0xb07 Amalgam
+!setname 0xb08 Stratossea
 !setname 0xbe1 Nethersea
 !setname 0x990 Duel Altering
 #Cstudio Archetype
