Change Nethersea Set number
Also prepare for ProjektStarBlast Archetype

--- a/strings.conf
+++ b/strings.conf
@@ -7,7 +7,11 @@
 !setname 0xb06 Stellaron
 !setname 0xb07 Amalgam
 !setname 0xb08 Stratossea
-!setname 0xbe1 Nethersea
+!setname 0xbe1 ???
+!setname 0xbe2 Nethersea
+!setname 0xbe3 ???
+!setname 0xbe4 ???
+!setname 0xbe5 ProjektStarBlast
 !setname 0x990 Duel Altering
 #Cstudio Archetype
 !setname 0xbc0 NGNL
