Add Pyrostar Archetype
9 cards for now

--- a/strings.conf
+++ b/strings.conf
@@ -7,6 +7,7 @@
 !setname 0xb06 Stellaron
 !setname 0xb07 Amalgam
 !setname 0xb08 Stratossea
+!setname 0xb09 Pyrostar
 !setname 0xbe1 ???
 !setname 0xbe2 Nethersea
 !setname 0xbe3 ???
