--- a/strings.conf
+++ b/strings.conf
@@ -4,10 +4,11 @@
 !setname 0xb03 Zodragon
 !setname 0xb04 Reoyin
 !setname 0xb05 Setsugebishin
-!setname 0xb06 Stellaron
+!setname 0xb06 XMace
 !setname 0xb07 Amalgam
 !setname 0xb08 Stratossea
 !setname 0xb09 Pyrostar
+!setname 0xb0a HaunTale
 !setname 0xbe1 ???
 !setname 0xbe2 Nethersea
 !setname 0xbe3 ???
