Add Xros Archetype
Total 18 Cards

--- a/strings.conf
+++ b/strings.conf
@@ -9,6 +9,11 @@
 !setname 0xb08 Stratossea
 !setname 0xb09 Pyrostar
 !setname 0xb0a HaunTale
+!setname 0xb0b Lily Blight
+!setname 0xb0c Sanguin Roots
+!setname 0xb0d Lionel:
+!setname 0xb0e Xros
+
 !setname 0xbe1 ???
 !setname 0xbe2 Nethersea
 !setname 0xbe3 ???
