Add Tori-No-Kami Archetype
Also some experiment archetype code

--- a/strings.conf
+++ b/strings.conf
@@ -11,8 +11,12 @@
 !setname 0xb0a HaunTale
 !setname 0xb0b Lily Blight
 !setname 0xb0c Sanguin Roots
-!setname 0xb0d Lionel:
+!setname 0xb0d Elementile
 !setname 0xb0e Xros
+!setname 0xb0f Grimoire
+!setname 0xb10 Dandylion
+!setname 0xb11 Worlds Beyond
+!setname 0xb12 Tori-No-Kami
 
 !setname 0xbe1 ???
 !setname 0xbe2 Nethersea
